--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,10 +1,18 @@
-# Change these first
-owner: 24HeuresINSA # Your GitHub organization or username, where this repository lives
-repo: upptime # The name of this repository
+owner: 24HeuresINSA
+repo: upptime
 
 sites:
   - name: Google
     url: https://www.google.com
+
+####################
+# Website Services
+####################
+  - name: Website
+    url: https://www.24heures.org
+
+  - name: Strapi
+    url: https://strapi.24heures.org
 
   - name: Website - from globalping (california)
     url: https://www.24heures.org
@@ -21,69 +29,91 @@ sites:
     type: globalping
     location: paris
 
+####################
+# Overbookd Services
+####################
+## PROD ##
   - name: Overbookd frontend
     url: https://overbookd.24heures.org
-    expectedStatusCodes:
-      - 200
+    __dangerous__body_down_if_text_missing: "Bienvenue aux 24h de l'INSA 👋"
+  
   - name: Overbookd backend
     url: https://overbookd.24heures.org/api/
     __dangerous__body_down_if_text_missing: 'Hello from overbookd backend'
+  
+## PREPROD ##
   - name: Preprod Overbookd frontend
     url: https://preprod.overbookd.24heures.org
-    expectedStatusCodes:
-      - 200
+    __dangerous__body_down_if_text_missing: "Bienvenue aux 24h de l'INSA 👋"
+
   - name: Preprod Overbookd backend
     url: https://preprod.overbookd.24heures.org/api/
     __dangerous__body_down_if_text_missing: 'Hello from overbookd backend'
+  
+## CETAIT MIEUX AVANT ##
   - name: cetait mieux avant Overbookd frontend
     url: https://cetaitmieuxavant.24heures.org
-    expectedStatusCodes:
-      - 200
+    __dangerous__body_down_if_text_missing: "Bienvenue aux 24h de l'INSA 👋"
+  
   - name: cetait mieux avant Overbookd backend
     url: https://cetaitmieuxavant.24heures.org/api/
     __dangerous__body_down_if_text_missing: 'Hello from overbookd backend'
-  - name: OverRun backend
-    url: https://overrun.24heures.org/api/v1/
-    expectedStatusCodes:
-      - 200
-  - name: OverRun frontend User
+  
+####################
+# OverRun Services
+####################
+## PROD ##
+  - name: OverRun frontend
     url: https://overrun.24heures.org
-    expectedStatusCodes:
-      - 200
-  - name: OverRun frontend Admin
-    url: https://overrun.24heures.org/admin
-    expectedStatusCodes:
-      - 200
-  - name: Grafana
-    url: https://gestion.24heures.org/grafana/login
-    expectedStatusCodes:
-      - 200
-  - name: Wiki
-    url: https://wiki.24heures.org
-    expectedStatusCodes:
-      - 200
+    __dangerous__body_down_if_text_missing: "OverRun"
+  
+  - name: OverRun backend
+    url: https://overrun.24heures.org/rest-api/
+    __dangerous__body_down_if_text_missing: 'Hello from OverRun backend'
+
+## PREPROD ##
+  - name: Preprod OverRun frontend
+    url: https://preprod.overrun.24heures.org
+    __dangerous__body_down_if_text_missing: "OverRun"
+
+  - name: Preprod OverRun backend
+    url: https://preprod.overrun.24heures.org/rest-api/
+    __dangerous__body_down_if_text_missing: 'Hello from OverRun backend'
+
+####################
+# Oversales Services
+####################  
   - name: OverSales frontend
     url: https://oversales.24heures.org
-    expectedStatusCodes:
-      - 200
+    __dangerous__body_down_if_text_missing: "Oversales"
+  
   - name: OverSales backend
     url: https://oversales.24heures.org/api
     __dangerous__body_down_if_text_missing: 'Hello from OverSales backend'
+
+
+####################
+# Other Services
+####################
+  - name: Grafana
+    url: https://gestion.24heures.org/grafana/login
+    __dangerous__body_down_if_text_missing: "Welcome to Grafana"
+  
+  - name: Wiki
+    url: https://wiki.24heures.org
+    __dangerous__body_down_if_text_missing: "Wiki 24h de l'INSA"
+  
   - name: Zitadel
     url: https://zitadel.24heures.org/debug/healthz
-    expectedStatusCodes:
-      - 200
+    __dangerous__body_down_if_text_missing: "ok"
 
-assignees: # Users to assign downtime issues (optional)
+assignees:
   - titouan-joseph
 
 status-website:
-  # Add your custom domain name, or remove the `cname` line if you don't have a domain
-  # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
   cname: upptime.24heures.org
-  # baseUrl: /your-repo-name
   logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
-  name: Upptime
+  name: Upptime - 24 Heures de l'INSA
   introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
   introMessage: This is a sample status page which uses **real-time** data from our [GitHub repository](https://github.com/upptime/upptime). No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/upptime/upptime)
   navbar:
@@ -91,6 +121,8 @@ status-website:
       href: /
     - title: GitHub
       href: https://github.com/$OWNER/$REPO
+    - title: Website
+      href: https://www.24heures.org
 
 # Upptime also supports notifications, assigning issues, and more
 # See https://upptime.js.org/docs/configuration
